--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,6 @@
   "throw error": "throw error",
   "Главная": "Главная",
   "О сайте": "О сайте",
-  "Переключить": "Переключить"
+  "Переключить": "Переключить",
+  "Короткая версия языка": "Русс"
 }
