add login module

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,6 @@
   "Главная": "Main",
   "О сайте": "About us",
   "Переключить": "Переключить",
-  "Короткая версия языка": "Eng"
+  "Короткая версия языка": "Eng",
+  "Неверный логин или пароль": "Wrong login or password"
 }
