--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,6 @@
   "Главная": "Главная",
   "О сайте": "О сайте",
   "Переключить": "Переключить",
-  "Короткая версия языка": "Русс"
+  "Короткая версия языка": "Русс",
+  "Неверный логин или пароль": "Неверный логин или пароль"
 }
