--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -2,5 +2,10 @@
   "Профиль": "Профиль",
   "Редактировать": "Редактировать",
   "Имя": "Имя",
-  "Фамилия": "Фамилия"
+  "Фамилия": "Фамилия",
+  "Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
+  "Некорректная страна": "Некорректная страна",
+  "Некорректный возраст": "Некорректный возраст",
+  "Некоректные данные пользователя (имя или фамилия)": "Некоректные данные пользователя (имя или фамилия)",
+  "Данные не верны": "Данные не верны"
 }
